helpers file with flash() function

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,9 @@
     "autoload": {
         "psr-0": {
             "Jevets\\Kirby": "src"
-        }
+        },
+        "files": [
+            "helpers.php"
+        ]
     }
 }
