trying to get autoload helpers working

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
             "Jevets\\Kirby": "src"
         },
         "files": [
-            "helpers.php"
+            "src/helpers.php"
         ]
     }
 }
