--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "jevets/kirby-flash",
     "description": "Stores data in the session for the next request. Data is removed after the next page load.",
+    "version": "0.0.1",
     "type": "library",
     "keywords": ["kirby", "flash", "session"],
     "authors": [
